[package]
name = "b58ify"
version = "0.1.2"
edition = "2021"
description = "b58ify is used to perform a simple conversion to convert alphanumeric strings into a b58 valid counterpart"
license = "MIT"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
